@@ -1,5 +1,7 @@
 package UnitSystem.demo.BusinessLogic.ImpServiceLayer;
 
+import UnitSystem.demo.Aspect.Security.CourseTeacherOnly;
+import UnitSystem.demo.Aspect.Security.TeachersOnly;
 import UnitSystem.demo.BusinessLogic.InterfaceServiceLayer.EnrolledCourseService;
 import UnitSystem.demo.DataAccessLayer.Dto.EnrolledCourse.EnrolledCourseRequest;
 import UnitSystem.demo.DataAccessLayer.Dto.EnrolledCourse.EnrolledCourseResponse;
@@ -9,11 +11,15 @@ import UnitSystem.demo.DataAccessLayer.Entities.User;
 import UnitSystem.demo.DataAccessLayer.Repositories.CourseRepository;
 import UnitSystem.demo.DataAccessLayer.Repositories.EnrolledCourseRepository;
 import UnitSystem.demo.DataAccessLayer.Repositories.UserRepository;
+import UnitSystem.demo.ExcHandler.Entites.ErrorResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -55,31 +61,35 @@ public class EnrolledCourseServiceImp implements EnrolledCourseService {
     }
 
     @Override
+    @Cacheable(value = "enrollmentsCache", key = "'allEnrollments'")
     public List<EnrolledCourseResponse> getAllEnrolledCourses() {
         return enrolledCourseRepository.findAll().stream()
                 .map(this::mapToEnrolledCourseResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Cacheable(value = "enrollmentsCache", key = "'enrollmentsByStudent:' + #studentId")
     public List<EnrolledCourseResponse> getEnrolledCoursesByStudentId(Long studentId) {
         User student = userRepository.findById(studentId)
                 .orElseThrow(() -> new RuntimeException("Student not found"));
         return enrolledCourseRepository.findByStudent(student).stream()
                 .map(this::mapToEnrolledCourseResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Cacheable(value = "enrollmentsCache", key = "'enrollmentsByCourse:' + #courseId")
     public List<EnrolledCourseResponse> getEnrolledCoursesByCourseId(Long courseId) {
         Course course = courseRepository.findById(courseId)
                 .orElseThrow(() -> new RuntimeException("Course not found"));
         return enrolledCourseRepository.findByCourse(course).stream()
                 .map(this::mapToEnrolledCourseResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Cacheable(value = "enrollmentsCache", key = "'enrollmentById:' + #enrolledCourseId")
     public EnrolledCourseResponse getEnrolledCourseById(Long enrolledCourseId) {
         return enrolledCourseRepository.findById(enrolledCourseId)
                 .map(this::mapToEnrolledCourseResponse)
@@ -87,6 +97,7 @@ public class EnrolledCourseServiceImp implements EnrolledCourseService {
     }
 
     @Override
+    @CacheEvict(value = "enrollmentsCache", allEntries = true)
     public EnrolledCourseResponse enrollStudentInCourse(EnrolledCourseRequest enrolledCourseRequest) {
         User student = userRepository.findById(enrolledCourseRequest.getStudentId())
                 .orElseThrow(() -> new RuntimeException("Student not found"));
@@ -104,7 +115,15 @@ public class EnrolledCourseServiceImp implements EnrolledCourseService {
     }
 
     @Override
+    @CacheEvict(value = "enrollmentsCache", allEntries = true)
     public void unenrollStudentFromCourse(Long enrolledCourseId) {
         enrolledCourseRepository.deleteById(enrolledCourseId);
+    }
+
+    @Override
+    @TeachersOnly
+    public EnrolledCourse findEnrolledCourseById(Long enrolledCourseId) {
+        return enrolledCourseRepository.findById(enrolledCourseId)
+                .orElseThrow( () -> new RuntimeException("Enrolled course not found"));
     }
 }
