@@ -8,9 +8,12 @@ import UnitSystem.demo.DataAccessLayer.Entities.User;
 import UnitSystem.demo.DataAccessLayer.Repositories.FeedbackRepository;
 import UnitSystem.demo.DataAccessLayer.Repositories.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,29 +46,36 @@ public class FeedbackServiceImp implements FeedbackService {
     }
 
     @Override
+    @Cacheable(value = "feedbacksCache", key = "'allFeedbacks'")
     public List<FeedbackResponse> getAllFeedbacks() {
         return feedbackRepository.findAllOrderByCreatedAtDesc().stream()
                 .map(this::mapToFeedbackResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+
+
     @Override
+    @Cacheable(value = "feedbacksCache", key = "'feedbacksByRole:' + #role")
     public List<FeedbackResponse> getFeedbacksByRole(String role) {
         return feedbackRepository.findByRole(role).stream()
                 .map(this::mapToFeedbackResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Cacheable(value = "feedbacksCache", key = "'feedbacksByUser:' + #userId")
     public List<FeedbackResponse> getFeedbacksByUserId(Long userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found"));
         return feedbackRepository.findByUser(user).stream()
+                .limit(4) // Limit to the most recent 4 feedbacks
                 .map(this::mapToFeedbackResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Cacheable(value = "feedbacksCache", key = "'feedbackById:' + #feedbackId")
     public FeedbackResponse getFeedbackById(Long feedbackId) {
         return feedbackRepository.findById(feedbackId)
                 .map(this::mapToFeedbackResponse)
@@ -73,6 +83,7 @@ public class FeedbackServiceImp implements FeedbackService {
     }
 
     @Override
+    @CacheEvict(value = "feedbacksCache", allEntries = true)
     public FeedbackResponse createFeedback(FeedbackRequest feedbackRequest) {
         Feedback feedback = mapToFeedback(feedbackRequest);
         feedbackRepository.save(feedback);
@@ -80,6 +91,7 @@ public class FeedbackServiceImp implements FeedbackService {
     }
 
     @Override
+    @CacheEvict(value = "feedbacksCache", allEntries = true)
     public FeedbackResponse updateFeedback(Long feedbackId, FeedbackRequest feedbackRequest) {
         Feedback existingFeedback = feedbackRepository.findById(feedbackId)
                 .orElseThrow(() -> new RuntimeException("Feedback not found"));
@@ -92,6 +104,17 @@ public class FeedbackServiceImp implements FeedbackService {
     }
 
     @Override
+    @Cacheable(value = "feedbacksCache", key = "'recentFeedbacks'")
+    public List<FeedbackResponse> getRecentFeedbacks() {
+        return feedbackRepository.findAllOrderByCreatedAtDesc()
+                .stream()
+                .limit(4)
+                .map(this::mapToFeedbackResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @CacheEvict(value = "feedbacksCache", allEntries = true)
     public void deleteFeedback(Long feedbackId) {
         feedbackRepository.deleteById(feedbackId);
     }
